client/src/components/ItemList/ItemList.scss
@import '../../styles/colors.scss';
@import '../../styles/params.scss';

.item-list {
    display: flex;
    flex: 1 0 auto;
    flex-direction: column;
    flex-wrap: wrap;

    .item-list-row {
        .wrapper {
            position: relative;
            max-width: $ui-width;
            margin: 0 auto 0;

            .line-1 {
                position: relative;
                box-sizing: content-box;
                padding-top: 10px;
                padding-right: 90px;
                margin-bottom: 8px;             
            }
            .line-2 {
                position: relative;
            }

            .item-proto {                
                width: 49px;
                height: 49px;
                float: left;
                font-size: 12px;
                color: #FFF;
                line-height: 49px;
                text-align: center;
                margin-right: 10px;
                &.proto-WS {
                    background-color: #9C27B0;
                }
                &.proto-REST {
                    background-color: #26A69A;
                }
            }

            .item-status {
                position: absolute;
                right: 0;
                top: 0;

                width: 80px;
                height: 49px;
                font-size: 12px;
                line-height: 49px;
                text-align: center;
                border-left: 2px solid #FFF;
                &.item-status-success {
                    color: green;
                }
                &.item-status-error {
                    color: red;
                }
                &.item-status-working {
                    color: blue;
                }
            }

            .item-payload {
                box-sizing: content-box;
                text-overflow: ellipsis;
                white-space: nowrap;
                overflow: hidden;
            }

            .item-id {
                font-size: 11px;
                float: left;
                margin-right: 10px;
            }

            .item-date {
                font-size: 11px;
                float: left;
                margin-right: 10px;
            }
            @media only screen 
            and (max-device-width: 420px) {
                .line-1 {
                    margin-bottom: 3px;
                }
            }
        }

        & > .request-id {
            margin-bottom: 5px;            
        }
        & > .request-status {
            position: absolute;
            right: 20px;
            top: 18px;
        }
        &.odd {
            background-color:#E3F2FD;
        }
        &.clickable:hover {
            background-color: darken(#E3F2FD, 5%);
            cursor: pointer;
        }
    }
}

  

